--- a/css/main.css
+++ b/css/main.css
@@ -86,6 +86,125 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+/* -------------------- Base Header - Footer Styles -------------------- */
+body{
+}
+header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+.content-wrapper{
+  display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+}
+
+header-nav{
+  display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+}
+
+header-nav-ul{
+  display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.header-divider{}
+
+main{}
+
+.hero-area{
+  display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+}
+
+aside{
+  display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+}
+
+.form-description{}
+
+.form{
+
+}
+
+.features{
+  display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+}
+
+features-item-description{
+  display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+}
+
+.reviews{
+  display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+}
+.mission{
+  display: flex;
+    justify-content: center;
+    align-items: center;
+  flex-flow: row wrap;
+}
+footer {
+  display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-content{
+
+}
+footer-social-icons {
+  display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+footer-social {
+
+}
+.contact{
+  display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+  }
+.faq{
+  display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+  }
+.content-wrapper{
+  display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+}
+}
+
+
+
 
 /* ==========================================================================
    Helper classes
@@ -260,4 +379,3 @@ textarea {
     page-break-after: avoid;
   }
 }
-
