--- a/css/main.css
+++ b/css/main.css
@@ -94,41 +94,72 @@ header {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+}
+header {
   padding: 15px 0;
 }
 
 header .content-wrapper{
-  width:89%;
   margin:0px;
   display: flex;
     justify-content: center;
     align-items: center;
     flex-flow: row wrap;
 }
-content-wrapper-h1{
-  display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: row wrap;
-
+.header-divider {
+  width: 100%;
+  height: 1px;
+  margin: 10px 0 20px 0;
 }
-header-nav{
+
+header nav{
   width: 60%;
-  display: inline-flex;
-    justify-content: center;
+  display:flex;
+    justify-content: space-around;
     align-items: center;
     flex-flow: row wrap;
 }
 
 header-nav-ul{
   display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-around;
+  width:100%;
+}
+footer {
+  flex-direction: column;
 }
 
-.header-divider{}
+footer p {
+  margin: 0;
+}
 
-main{}
+footer .content-wrapper {
+  width: 55%;
+  margin: 50px 0;
+}
+
+footer .contact {
+  margin-bottom: 50px;
+}
+
+footer .social-icons {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+footer .social-icons p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+footer .copyright {
+  margin: 20px 0;
+}
+
+/* -------------------- Mobile Styles - Homepage -------------------- */
+
 
 .hero-area{
   display: flex;
@@ -318,8 +349,151 @@ footer .content-wrapper{
    Modify as content requires.
    ========================================================================== */
 
-@media only screen and (min-width: 35em) {
-  /* Style adjustments for viewports that meet the condition */
+@media only screen and (min-width: 768px) {
+  /* Tablet styles here */
+
+
+  .content-wrapper {
+        max-width: 640px;
+        margin: 100px 0;
+    }
+
+    /* Header */
+
+    header {
+      justify-content: center;
+
+    }
+
+    header .content-wrapper {
+        width:100%;
+        justify-content: center;
+
+    }
+
+    header nav {
+        width:645px;
+        justify-content: center;
+
+    }
+
+    header nav ul {
+      justify-content: center;
+
+    }
+
+    .header-divider {
+        display: none;
+    }
+
+
+    /* Hero Area */
+
+    /* Aside */
+    aside .content-wrapper {
+        margin: 50px 0;
+        display:flex;
+        justify-content: center;
+        flex-flow:wrap;
+    }
+
+    aside .content-wrapper .form-description,
+    aside .content-wrapper .form {
+        width:
+        margin: 0;
+    }
+
+    /* Features */
+
+    .features article {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-flow: wrap;
+      flex-basis: auto;
+
+    }
+
+    .features .features-item-description {
+        width:165px;
+    }
+
+    /* Reviews */
+    .reviews article {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+    }
+
+    .reviews article div {
+        width:
+    }
+
+    /* Footer */
+    footer .content-wrapper {
+        width:
+        margin: 100px 0;
+    }
+
+    .footer-content {
+      display: flex;
+      justify-content:center;
+      align-items: center;
+
+    }
+
+    footer .contact {
+        margin-bottom: 0;
+    }
+
+    footer .copyright {
+        width:
+    }
+}
+/* ==========================================================================
+   About Page
+   ========================================================================== */
+
+   .mission-content {
+        display:flex;
+        justify-content: space-between;
+        align-items:center
+        padding:30px;
+    }
+
+    .mission-content p {
+        width:75%;
+    }
+
+    .contact-section .content-wrapper h2 {
+        width:80%;
+    }
+
+    .contact-content {
+        display:flex;
+        justify-content:space-between;
+        align-items:center;
+}
+/* ==========================================================================
+   FAQ Page
+   ========================================================================== */
+    .faq .content-wrapper {
+        justify-content: space-between;
+    }
+
+    .faq-content {
+        flex-basis: 40%;
+    }
+
+    .faq h2 {
+        width: 100%;
+    }
+
+
+
+@media only screen and (min-width: 1200px) {
+/*Desktop styles here*/
 }
 
 @media print,
