--- a/css/main.css
+++ b/css/main.css
@@ -87,7 +87,7 @@ textarea {
    Author's custom styles
    ========================================================================== */
 /* -------------------- Base Header - Footer Styles -------------------- */
-*/
+
 /* General Styles */
 
 html {
@@ -134,11 +134,11 @@ p {
 }
 
 img {
-
+   width: 100%;
 }
 
 figure {
-
+margin: 0;
 }
 
 address {
@@ -181,18 +181,26 @@ header .content-wrapper{
 
 header nav{
   width: 60%;
-  display:flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-flow: row wrap;
+  font-size: 1.125em;
+  font-weight: 700;
+  text-transform: uppercase;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-flow: row wrap;
 }
 
 header-nav-ul{
-  display: flex;
-    justify-content: space-around;
-  width:100%;
+  width: 100%;
+ display: flex;
+ justify-content: space-around;
+}
+
+header nav ul li {
+  font-size: 1.125em;
 }
 footer {
+  text-align: center;
   flex-direction: column;
 }
 
@@ -224,6 +232,28 @@ footer .social-icons p {
 footer .copyright {
   margin: 20px 0;
 }
+
+/* -------------------- Mobile Styles - Homepage -------------------- */
+
+/* Hero Area */
+
+.hero-area {
+  background: url(../img/unplugged-retreat.png);
+  background-size: cover;
+  background-position: center;
+  min-height: 500px;
+  display: flex;
+  justify-content: center;
+  flex-flow: row wrap;
+}
+
+.hero-area h1 {
+  font-size: 2.25em;
+  font-family: 'Poppins', Helvetica, Arial, sans-serif;
+  font-weight: 500;
+  line-height: 1.2;
+}
+
 
 /* Aside */
 
@@ -260,109 +290,120 @@ input[type=button] {
   text-align: center;
   text-transform: uppercase;
 }
-/* -------------------- Mobile Styles - Homepage -------------------- */
 
 
-.hero-area{
-  display: flex;
+ /* Features */
+
+ .features{
+   background: url('../img/unplugged-retreat-features.jpg');
+  background-size: cover;
+  background-position: center;
+   display: flex;
     justify-content: center;
-    align-items: center;
     flex-flow: row wrap;
 }
 
-aside{
+features h2 {
+  margin-bottom: 60px;
+}
+
+.features article {
+  width: 63%;
+  margin: 30px 0;
+}
+
+.features .features-items {
   display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: row wrap;
-}
-
-.form-description{}
-
-.form{
-
-}
-
-.features{
-  display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: row wrap;
-}
-
-features-item-description{
-  display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: row wrap;
-    margin:15px;
-}
-.features p{
-  margin:0px;
-}
-.reviews{
-  display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: row wrap;
-    padding:20px,0;
-  }
-
-.reviews h3{
-width:48%;
-}
-
-.mission{
-  display: flex;
-    justify-content: center;
-    align-items: center;
+  justify-content: center;
+  align-items: center;
   flex-flow: row wrap;
 }
-footer {
-  display: flex;
-    justify-content: center;
-    align-items: center;
-}
-footer p{
-  margin:0px;
+
+.features p {
+  text-align: center;
+  margin: 0;
 }
 
-.footer-content{
+/*Reviews */
 
-}
-footer-social-icons {
+..reviews {
+  background-color: #2a423a;
   display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-footer-social {
+  justify-content: center;
+  flex-flow: row wrap;
+}
 
+.reviews h2 {
+  margin-bottom: 40px;
+  line-height: 1;
 }
-.contact{
-  display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: row wrap;
-  }
-.faq{
-  display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: row wrap;
-  }
-footer .content-wrapper{
+
+.reviews h3 {
   width: 55%;
-    margin: 50px 0;
-  display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: row wrap;
-}
+  margin: 20px 0;
 }
 
+  /* ==========================================================================
+   About Page
+   ========================================================================== */
 
 
 
+   .mission {
+     background-color: #527158;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     flex-flow: row wrap;
+   }
+
+   .contact-section {
+     background-color: #2a423a;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     flex-flow: row wrap;
+   }
+
+   .contact-content p {
+     margin: 0;
+   }
+
+   /* ==========================================================================
+      FAQ Page
+      ========================================================================== */
+
+   .faq {
+     background-color: #527158;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     flex-flow: row wrap;
+   }
+
+   .faq .content-wrapper {
+     margin: 50px 0 0 0;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     flex-flow: row wrap;
+   }
+
+   .faq h2 {
+     margin-bottom: 40px;
+     line-height: 1;
+   }
+
+   .faq-content {
+     margin-bottom: 50px;
+   }
+
+   .faq-content h4 {
+     line-height: 1.333;
+   }
+
+
+f
 /* ==========================================================================
    Helper classes
    ========================================================================== */
@@ -451,15 +492,24 @@ footer .content-wrapper{
    Modify as content requires.
    ========================================================================== */
 
-@media only screen and (min-width: 768px) {
-  /* Tablet styles here */
+   @media only screen and (min-width:768px) {
+     /*Tablet styles here*/
 
+     /* General styles */
+     .content-wrapper {
+       max-width: 640px;
+       margin: 100px 0;
+     }
 
-  .content-wrapper {
-        max-width: 640px;
-        margin: 100px 0;
-    }
+     h2 {
+       font-size: 2.25em;
+       line-height: 1.333;
+     }
 
+     h3 {
+         font-size: 1.5em;
+         line-height: 1.25;
+     }
     /* Header */
 
     header {
@@ -561,11 +611,11 @@ footer .content-wrapper{
         display:flex;
         justify-content: space-between;
         align-items:center
-        padding:30px;
+        padding-top:20px;
     }
 
     .mission-content p {
-        width:75%;
+        width:45%;
     }
 
     .contact-section .content-wrapper h2 {
@@ -577,6 +627,11 @@ footer .content-wrapper{
         justify-content:space-between;
         align-items:center;
 }
+
+.contact-content h4 {
+    font-size: 1.5em;
+  }
+
 /* ==========================================================================
    FAQ Page
    ========================================================================== */
@@ -585,151 +640,177 @@ footer .content-wrapper{
     }
 
     .faq-content {
-        flex-basis: 40%;
+        flex-basis: 45%;
     }
 
     .faq h2 {
         width: 100%;
     }
-
+    .faq h4,
+      .faq p {
+          font-size: .875em;
+          line-height: 1.125;
+      }
+    }
 
 
 @media only screen and (min-width: 1200px) {
 /*Desktop styles here*/
+header {
+    padding: 15px 0;
+  }
+
+  .content-wrapper {
+    max-width: 960px;
+  }
+
+  h2 {
+    font-size: 2.25em;
+  }
+
+  h3,
+  h4 {
+      font-size: 1.875em;
+  }
+
+  p {
+      font-size: 1.125em;
+      line-height: 1.333;
+  }
+  /* Hero */
+  .hero-area h1 {
+    font-size: 3.75em;
+    width: 80%;
 }
 
-@media print,
-  (-webkit-min-device-pixel-ratio: 1.25),
-  (min-resolution: 1.25dppx),
-  (min-resolution: 120dpi) {
-  /* Style adjustments for high resolution devices */
-}
+  /* Aside */
+  aside .content-wrapper {
+    justify-content: space-around;
+  }
+
+  aside .content-wrapper .form-description,
+  aside .content-wrapper .form {
+    width: 30%;
+  }
+
+  .form-description p {
+    font-size: 1.125em;
+  }
+
+  /* Features */
 
 
-@media only screen and (min-width: 1200px) {
-/*Desktop styles here */
-    .content-wrapper {
-         max-width: 960px;
+  .features h2 {
+    width: 90%;
+  }
 
-    }
+  .features article {
+    flex-basis: 33%;
+  }
 
-     /* Hero */
-    .hero-area h1 {
-        width:60%;
-    }
+  /* Reviews */
+  .reviews article div {
+    width: 42%;
+  }
 
-    /* Aside */
-    aside .content-wrapper {
-        justify-content:space-around;
-    }
+  .reviews h2 {
+    padding-bottom: 50px;
+  }
 
-    aside .content-wrapper .form-description,
-    aside .content-wrapper .form {
-        width:30%
-    }
+  footer h4 {
+    font-size: 1.875em;
+  }
+  /* ==========================================================================
+    About Page
+    ========================================================================== */
 
-    /* Features */
-    .features h2 {
-        width:90%
-    }
-
-    .features article {
-        flex-basis:33%
-    }
-
-    /* Reviews */
-    .reviews article div {
-        width:42%
-    }
-
-/* ==========================================================================
-   About Page
-   ========================================================================== */
     .mission h2,
     .contact-section .content-wrapper h2 {
-        width:95%
+        width: 95%;
+        font-size: 3em;
     }
 
-/* ==========================================================================
-   FAQ Page
-   ========================================================================== */
+    .contact-content h4 {
+      font-size: 1.875em;
+    }
+
+    /* ==========================================================================
+    FAQ Page
+    ========================================================================== */
     .faq h2 {
-        width: 100%;
+      width: 100%;
+      font-size: 3em;
     }
 
-}
-
-/* ==========================================================================
-   Print styles.
-   Inlined to avoid the additional HTTP request:
-   https://www.phpied.com/delay-loading-your-print-css/
-   ========================================================================== */
-
-@media print {
-  *,
-  *::before,
-  *::after {
-    background: #fff !important;
-    color: #000 !important;
-    /* Black prints faster */
-    box-shadow: none !important;
-    text-shadow: none !important;
+    .faq h4,
+    .faq p {
+        font-size: 1.125em;
+        line-height: 1;
+    }
   }
 
-  a,
-  a:visited {
-    text-decoration: underline;
-  }
+  /* ==========================================================================
+     Print styles.
+     Inlined to avoid the additional HTTP request:
+     https://www.phpied.com/delay-loading-your-print-css/
+     ========================================================================== */
 
-  a[href]::after {
-    content: " (" attr(href) ")";
-  }
-
-  abbr[title]::after {
-    content: " (" attr(title) ")";
-  }
-
-  /*
-   * Don't show links that are fragment identifiers,
-   * or use the `javascript:` pseudo protocol
-   */
-  a[href^="#"]::after,
-  a[href^="javascript:"]::after {
-    content: "";
-  }
-
-  pre {
-    white-space: pre-wrap !important;
-  }
-
-  pre,
-  blockquote {
-    border: 1px solid #999;
-    page-break-inside: avoid;
-  }
-
-  /*
-   * Printing Tables:
-   * https://web.archive.org/web/20180815150934/http://css-discuss.incutio.com/wiki/Printing_Tables
-   */
-  thead {
-    display: table-header-group;
-  }
-
-  tr,
-  img {
-    page-break-inside: avoid;
-  }
-
-  p,
-  h2,
-  h3 {
-    orphans: 3;
-    widows: 3;
-  }
-
-  h2,
-  h3 {
-    page-break-after: avoid;
-  }
-}
+     @media print {
+       *,
+       *:before,
+       *:after {
+         background: transparent !important;
+         color: #000 !important;
+         /* Black prints faster */
+         -webkit-box-shadow: none !important;
+         box-shadow: none !important;
+         text-shadow: none !important;
+       }
+       a,
+       a:visited {
+         text-decoration: underline;
+       }
+       a[href]:after {
+         content: " (" attr(href) ")";
+       }
+       abbr[title]:after {
+         content: " (" attr(title) ")";
+       }
+       /*
+          * Don't show links that are fragment identifiers,
+          * or use the `javascript:` pseudo protocol
+          */
+       a[href^="#"]:after,
+       a[href^="javascript:"]:after {
+         content: "";
+       }
+       pre {
+         white-space: pre-wrap !important;
+       }
+       pre,
+       blockquote {
+         border: 1px solid #999;
+         page-break-inside: avoid;
+       }
+       /*
+          * Printing Tables:
+          * http://css-discuss.incutio.com/wiki/Printing_Tables
+          */
+       thead {
+         display: table-header-group;
+       }
+       tr,
+       img {
+         page-break-inside: avoid;
+       }
+       p,
+       h2,
+       h3 {
+         orphans: 3;
+         widows: 3;
+       }
+       h2,
+       h3 {
+         page-break-after: avoid;
+       }
+     }
